0029385: OCAF - TDataStd_IntPackedMap lacks interface to set map as TColStd_PackedMapOfInteger

Added method ChangeMap (const TColStd_PackedMapOfInteger& theMap).