src/TDataStd/TDataStd_IntPackedMap.cxx
@@ -84,6 +84,21 @@ Standard_Boolean TDataStd_IntPackedMap::ChangeMap (const Handle(TColStd_HPackedM
   }
   return Standard_False;
 }
+
+//=======================================================================
+//function : ChangeMap
+//purpose  :
+//=======================================================================
+Standard_Boolean TDataStd_IntPackedMap::ChangeMap (const TColStd_PackedMapOfInteger& theMap)
+{
+  if (!myMap->Map().IsEqual(theMap))
+  {
+    Backup();
+    myMap->ChangeMap().Assign(theMap);
+    return Standard_True;
+  }
+  return Standard_False;
+}
 //=======================================================================
 //function : Clear
 //purpose  : 
